--- a/src/components/CoinRow/coinRow.css
+++ b/src/components/CoinRow/coinRow.css
@@ -5,6 +5,7 @@
   padding: 15px 20px 20px 40px;
   margin: 0 15px;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
+  min-width: 800px;
 }
 .row:hover {
   background: #1c2033;
@@ -16,4 +17,9 @@
 }
 .triangle {
   font-size: 8px;
+}
+@media (max-width: 600px) {
+  .row {
+    margin: 0;
+  }
 }
